DMC-415 - Configuration of availability - Fix unit test failures to resolve all failing tests